logs_tsvc/s174.log
[RunLogger] 运行日志目录: /home/hanning/comet/runs/2026-07-14_00-56-07_tsvc_s174
  Dataset type: tsvc
============================================================
COMET agent: s174  max_steps=5
============================================================

[Evidence collection -- one-time analysis]
  IR extraction failed: Clang -emit-llvm failed: /home/hanning/comet/TSVC_shim/kernels/s174/s174.c:12:23: error: expected ';' after top level declarator
int kernel_s174(int M)
                      ^
                      ;
/home/hanning/comet/TSVC_shim/kernels/s174/s174.c:55:28: warning: incompatible pointer to integer conversion passing 'struct 
Evidence collection failed (IR extraction error?)
